[gd_scene load_steps=37 format=3 uid="uid://bw1rllwgm6w3k"]

[ext_resource type="Script" uid="uid://b6ac8k4slgspa" path="res://character_body_3d.gd" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://dtwcj5x4mtqsq" path="res://world.gd" id="1_tlwt5"]
[ext_resource type="Texture2D" uid="uid://cn6xxayuhlti5" path="res://Death Background.png" id="2_udxuc"]
[ext_resource type="PackedScene" uid="uid://cld620io4m31m" path="res://pause_menu.tscn" id="3_aqk2v"]
[ext_resource type="Script" uid="uid://dbowelix0bha6" path="res://area_3d.gd" id="3_cbp6q"]
[ext_resource type="Texture2D" uid="uid://dctfeslgw83k0" path="res://gun/pixels_00.png" id="3_pkg7o"]
[ext_resource type="Texture2D" uid="uid://b0rrsrrhgbg44" path="res://gun/pixels_01.png" id="4_gbfbk"]
[ext_resource type="Texture2D" uid="uid://cpgtrljxrlkrn" path="res://gun/pixels_02.png" id="5_ioo17"]
[ext_resource type="Texture2D" uid="uid://b2yid1qja7c14" path="res://Face/pixels_00.png" id="7_2o6r5"]
[ext_resource type="Texture2D" uid="uid://bk8g7poaw4cdv" path="res://Face/pixels_01.png" id="8_70uel"]
[ext_resource type="Texture2D" uid="uid://dha8oxumdcn52" path="res://Face/pixels.png" id="8_ikiii"]
[ext_resource type="Texture2D" uid="uid://dmp1ryu48kxuq" path="res://Face/pixels_02.png" id="9_hiqwa"]
[ext_resource type="Texture2D" uid="uid://dto7dq50s0w5s" path="res://Face/pixels_03.png" id="10_2u3nc"]
[ext_resource type="Texture2D" uid="uid://bds12lj2pknyn" path="res://Face/pixels_05.png" id="12_ikiii"]
[ext_resource type="PackedScene" uid="uid://dkqvr24mevo3w" path="res://health_pickup.tscn" id="13_2o6r5"]
[ext_resource type="Texture2D" uid="uid://6i8ng8o06n4s" path="res://Health/HealthContainer.png" id="14_70uel"]
[ext_resource type="Texture2D" uid="uid://bgalpqqh8cuj" path="res://Crosshair.png" id="15_2u3nc"]
[ext_resource type="Texture2D" uid="uid://r27jw1f4dt70" path="res://Health/HealthRepresent.png" id="15_hiqwa"]
[ext_resource type="PackedScene" uid="uid://d25pus4qfwgg8" path="res://death_screen.tscn" id="17_cbp6q"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ikiii"]
transparency = 1
blend_mode = 3
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cbp6q"]
material = SubResource("StandardMaterial3D_ikiii")

[sub_resource type="SphereShape3D" id="SphereShape3D_26xuy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gv5m4"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_f3sb7"]
sky_material = SubResource("ProceduralSkyMaterial_gv5m4")

[sub_resource type="Environment" id="Environment_fj7yv"]
background_mode = 2
sky = SubResource("Sky_f3sb7")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tlwt5"]
albedo_color = Color(1, 0.145098, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ic0uy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_pkg7o")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gbfbk")
}, {
"duration": 1.0,
"texture": ExtResource("5_ioo17")
}],
"loop": true,
"name": &"Shoot",
"speed": 2.0
}]

[sub_resource type="FontFile" id="FontFile_k3n1d"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="Theme_2o6r5"]
/colors/test = Color(0, 0, 0, 1)
/fonts/label = SubResource("FontFile_k3n1d")

[sub_resource type="FontFile" id="FontFile_70uel"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_hiqwa"]
font = SubResource("FontFile_70uel")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_26xuy"]
load_path = "res://.godot/imported/pixels_03.png-53615445e41bd2bc33b287465fdc85e2.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_cbp6q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_2u3nc")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_26xuy")
}, {
"duration": 1.0,
"texture": ExtResource("12_ikiii")
}],
"loop": true,
"name": &"Angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ikiii")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_2o6r5")
}, {
"duration": 1.0,
"texture": ExtResource("8_70uel")
}, {
"duration": 1.0,
"texture": ExtResource("9_hiqwa")
}, {
"duration": 1.0,
"texture": ExtResource("8_70uel")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tlwt5"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_aqk2v"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_k3n1d"]
size = Vector3(1, 2.96973, 4.60535)

[node name="World" type="Node3D"]
script = ExtResource("1_tlwt5")

[node name="DeathBackground" type="Sprite2D" parent="."]
visible = false
show_behind_parent = true
position = Vector2(571, 332.25)
scale = Vector2(105.5, 49.5938)
texture = ExtResource("2_udxuc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 6.19267, 0, 6.93026)
mesh = SubResource("SphereMesh_cbp6q")
skeleton = NodePath("../CharacterBody3D/Head/Camera3D/Label/Face")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
script = ExtResource("3_cbp6q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("SphereShape3D_26xuy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.920954, -0.323437, 0.21733, 0.0231232, 0.511383, 0.859042, -0.388985, 0.796163, -0.463481, 8.45023, 5.89937, -1.01837)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fj7yv")

[node name="Floor" type="CSGBox3D" parent="."]
calculate_tangents = false
use_collision = true
size = Vector3(100, 0.1, 100)

[node name="Block" type="CSGBox3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.52701, 0.721607, -1.93048)
transparency = 0.98
use_collision = true
size = Vector3(5.20984, 1.66174, 3.69824)

[node name="Block2" type="CSGBox3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.71281, 1.08871, 3.47055)
material_override = SubResource("StandardMaterial3D_tlwt5")
use_collision = true
size = Vector3(5.20984, 2.56276, 3.69824)

[node name="Block3" type="CSGBox3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.61454, 0.25562, -0.706891)
material_override = SubResource("StandardMaterial3D_tlwt5")
use_collision = true
size = Vector3(5.20984, 0.970486, 4.5072)

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.33617, -2.03172, 0)
script = ExtResource("1_f3sb7")

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.8096, 0)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]

[node name="Gun" type="AnimatedSprite2D" parent="CharacterBody3D/Head/Camera3D"]
position = Vector2(571, 524)
sprite_frames = SubResource("SpriteFrames_ic0uy")
animation = &"Default"

[node name="Label" type="Label" parent="CharacterBody3D/Head/Camera3D"]
offset_left = 19.0
offset_top = 489.0
offset_right = 171.0
offset_bottom = 512.0
theme = SubResource("Theme_2o6r5")
text = "Live Baldie reaction"
label_settings = SubResource("LabelSettings_hiqwa")

[node name="Face" type="AnimatedSprite2D" parent="CharacterBody3D/Head/Camera3D/Label"]
position = Vector2(69, 89)
scale = Vector2(0.643333, 0.658889)
sprite_frames = SubResource("SpriteFrames_cbp6q")
animation = &"Angry"
speed_scale = 0.5

[node name="GunCast" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -0.000775337, 0, -0.954541)
target_position = Vector3(0, 0, -1)
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false

[node name="Area3D" type="Area3D" parent="CharacterBody3D"]
transform = Transform3D(0.629402, 0, 0.77708, 0, 1, 0, -0.77708, 0, 0.629402, 0, 3.15329, 0)
script = ExtResource("3_cbp6q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/Area3D"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_tlwt5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/Area3D"]
transform = Transform3D(0.629402, 0, -0.77708, 0, 1, 0, 0.77708, 0, 0.629402, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_aqk2v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.19893, 0)
shape = SubResource("ConvexPolygonShape3D_aqk2v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_tlwt5")
skeleton = NodePath("../..")

[node name="PauseMenu" parent="." instance=ExtResource("3_aqk2v")]
visible = false
anchors_preset = -1
anchor_right = 1.02
anchor_bottom = 0.96
offset_left = 35.0
offset_top = 18.0
offset_right = 27.0
offset_bottom = 18.0
scale = Vector2(5, 5)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(0.990481, 0, -0.137652, 0, 1, 0, 0.137652, 0, 0.990481, 6.59724, 1.87507, -3.2055)
offset = Vector2(10, 0)
text = "Jump with [SPACE]
Move with [WASD]
pause with [ESC]
<------"

[node name="TestHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91564, 0.78132, 2.59726)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TestHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984863, 1.80267)
shape = SubResource("BoxShape3D_k3n1d")

[node name="HealthContainer" type="Sprite2D" parent="."]
position = Vector2(1045, 106)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_70uel")

[node name="HealthContainer2" type="Sprite2D" parent="."]
position = Vector2(1044, 106)
texture = ExtResource("15_hiqwa")

[node name="HealthPickup" parent="." instance=ExtResource("13_2o6r5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8926, 1.08789, -0.00531101)

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_2u3nc")

[node name="Death Screen" parent="." instance=ExtResource("17_cbp6q")]
visible = false
scale = Vector2(5, 5)

[connection signal="area_entered" from="MeshInstance3D/Area3D" to="CharacterBody3D/Area3D" method="_on_area_3d_area_entered"]
[connection signal="animation_looped" from="CharacterBody3D/Head/Camera3D/Gun" to="CharacterBody3D" method="_on_gun_2_animation_looped"]
